@@ -1,26 +1,24 @@
 /*
- Copyright  2007 MySQL AB, 2008 Sun Microsystems
- All rights reserved. Use is subject to license terms.
+ Copyright (c) 2007, 2011, Oracle and/or its affiliates. All rights reserved.
+ 
 
-  The MySQL Connector/J is licensed under the terms of the GPL,
-  like most MySQL Connectors. There are special exceptions to the
-  terms and conditions of the GPL as it is applied to this software,
-  see the FLOSS License Exception available on mysql.com.
+  The MySQL Connector/J is licensed under the terms of the GPLv2
+  <http://www.gnu.org/licenses/old-licenses/gpl-2.0.html>, like most MySQL Connectors.
+  There are special exceptions to the terms and conditions of the GPLv2 as it is applied to
+  this software, see the FLOSS License Exception
+  <http://www.mysql.com/about/legal/licensing/foss-exception.html>.
 
-  This program is free software; you can redistribute it and/or
-  modify it under the terms of the GNU General Public License as
-  published by the Free Software Foundation; version 2 of the
-  License.
+  This program is free software; you can redistribute it and/or modify it under the terms
+  of the GNU General Public License as published by the Free Software Foundation; version 2
+  of the License.
 
-  This program is distributed in the hope that it will be useful,  
-  but WITHOUT ANY WARRANTY; without even the implied warranty of
-  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
-  GNU General Public License for more details.
+  This program is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY;
+  without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
+  See the GNU General Public License for more details.
 
-  You should have received a copy of the GNU General Public License
-  along with this program; if not, write to the Free Software
-  Foundation, Inc., 51 Franklin St, Fifth Floor, Boston, MA
-  02110-1301 USA
+  You should have received a copy of the GNU General Public License along with this
+  program; if not, write to the Free Software Foundation, Inc., 51 Franklin St, Fifth
+  Floor, Boston, MA 02110-1301  USA
  
  */
 package com.mysql.jdbc;
@@ -45,29 +43,32 @@ public class RandomBalanceStrategy implements BalanceStrategy {
 		// we don't have anything to initialize
 	}
 
-	public Connection pickConnection(LoadBalancingConnectionProxy proxy,
-			List configuredHosts, Map liveConnections, long[] responseTimes,
+	public ConnectionImpl pickConnection(LoadBalancingConnectionProxy proxy,
+			List<String> configuredHosts, Map<String, ConnectionImpl> liveConnections, long[] responseTimes,
 			int numRetries) throws SQLException {
 		int numHosts = configuredHosts.size();
 
 		SQLException ex = null;
 
-		List whiteList = new ArrayList(numHosts);
+		List<String> whiteList = new ArrayList<String>(numHosts);
 		whiteList.addAll(configuredHosts);
 		
-		Map blackList = proxy.getGlobalBlacklist();
+		Map<String, Long> blackList = proxy.getGlobalBlacklist();
 
 		whiteList.removeAll(blackList.keySet());
 		
-		Map whiteListMap = this.getArrayIndexMap(whiteList);
+		Map<String, Integer> whiteListMap = this.getArrayIndexMap(whiteList);
 		
 
 		for (int attempts = 0; attempts < numRetries;) {
 			int random = (int) Math.floor((Math.random() * whiteList.size()));
+			if(whiteList.size() == 0){
+				throw SQLError.createSQLException("No hosts configured", null);
+			}
 
-			String hostPortSpec = (String) whiteList.get(random);
+			String hostPortSpec = whiteList.get(random);
 
-			Connection conn = (Connection) liveConnections.get(hostPortSpec);
+			ConnectionImpl conn = liveConnections.get(hostPortSpec);
 
 			if (conn == null) {
 				try {
@@ -75,11 +76,9 @@ public class RandomBalanceStrategy implements BalanceStrategy {
 				} catch (SQLException sqlEx) {
 					ex = sqlEx;
 
-					if (sqlEx instanceof CommunicationsException
-							|| "08S01".equals(sqlEx.getSQLState())) {
+					if (proxy.shouldExceptionTriggerFailover(sqlEx)) {
 
-						Integer whiteListIndex = (Integer) whiteListMap
-								.get(hostPortSpec);
+						Integer whiteListIndex = whiteListMap.get(hostPortSpec);
 
 						// exclude this host from being picked again
 						if (whiteListIndex != null) {
@@ -96,7 +95,7 @@ public class RandomBalanceStrategy implements BalanceStrategy {
 							}
 
 							// start fresh
-							whiteListMap = new HashMap(numHosts);
+							whiteListMap = new HashMap<String, Integer>(numHosts);
 							whiteList.addAll(configuredHosts);
 							blackList = proxy.getGlobalBlacklist();
 
@@ -110,7 +109,7 @@ public class RandomBalanceStrategy implements BalanceStrategy {
 					}
 				}
 			}
-
+			
 			return conn;
 		}
 
@@ -121,10 +120,10 @@ public class RandomBalanceStrategy implements BalanceStrategy {
 		return null; // we won't get here, compiler can't tell
 	}
 	
-	private Map getArrayIndexMap(List l) {
-		Map m = new HashMap(l.size());
+	private Map<String, Integer> getArrayIndexMap(List<String> l) {
+		Map<String, Integer> m = new HashMap<String, Integer>(l.size());
 		for (int i = 0; i < l.size(); i++) {
-			m.put(l.get(i), new Integer(i));
+			m.put(l.get(i), Integer.valueOf(i));
 		}
 		return m;
 		
